                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 08-04-2006 fixed: [ 1459126 ] LogPath XML Setting Not Respected
 - 08-04-2006 fixed: reverted old menuoverlay fix for dvdplayer and fixed it a bit differently
 - 08-04-2006 fixed: Skin font and fanspeed setting spincontrols displayed "?-1?".
 - 08-04-2006 added: initial code to provide albumart to visualisations
 - 08-04-2006 fixed: cache function would abort if filesystem wasn't able to read the exact requested size
 - 08-04-2006 fixed: new smb would cut of end of file. it seems new smb either missdetects CAP_LARGE_READX for server (should allow 64k reads) or has wrong syntax on read, causing it allways skip half the packet, and thus abort to early. workaround in libsmb/clireadwrite.c
 - 07-04-2006 updated: libsmb updated to 3.0.22 with enabled libiconv, supports switching dos codepage gui
 - 07-04-2006 updated: finnish and plosh langugae strings.xml
              Thanks jutski and NaPeK
 - 07-04-2006 fixed: don't use fixed width character arrays on user inputable settings for smb, also reorganzed smb settings in gui
 - 07-04-2006 fixed: Incorrect first and last letters in Hebrew (and other languages) - thanks to shahar for the assistance.
 - 07-04-2006 fixed: Cleaned up headers includes in guilib.
 - 07-04-2006 fixed: Scan music could run out of memory due to caching all paths.  CDirectory::GetDirectory no longer caches paths by default.
 - 07-04-2006 added: Startup.xml support for skin intros.  The skin itself should switch to Home.xml at the appropriate time using ReplaceWindow(Home).
 - 07-04-2006 added: Better video resolution choice for playback, thanks to Markeen.